checkin before going over to gh-pages

--- a/filtering_tutorial.ipynb
+++ b/filtering_tutorial.ipynb
@@ -29,23 +29,15 @@
      "input": [
       "#-- iPython notebook magic command to make plots appear within the \n",
       "#-- browser instead of opening a separate plotting window.\n",
-      "%matplotlib inline"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "%matplotlib inline\n",
+      "\n",
+      "#-- Increase the default fontsize for the plots\n",
       "mpl.rcParams['font.size'] = 16"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
