--- a/lightcurve_tutorial.ipynb
+++ b/lightcurve_tutorial.ipynb
@@ -80,6 +80,7 @@
       "ax2.set_ylabel('Counts')\n",
       "ax2.set_xlabel('Time (s)')\n",
       "\n",
+      "ax1.set_title('Time Variable Spectrum')\n",
       "fig.tight_layout()  \n",
       "fig.savefig('spectrum_vs_lightcurve.pdf', bbox_inches='tight')"
      ],
