Added comments and notes

--- a/timefilter_tutorial.ipynb
+++ b/timefilter_tutorial.ipynb
@@ -12,13 +12,18 @@
      "metadata": {},
      "source": [
       "# Timefilter\n",
-      "\n"
+      "This tutorial outlines the steps needed to filter out unwanted COS data in an exposure.  To do this, we will use the TimeFilter python module to select bad data in COS corrtag files, and then re-extract the data into x1d spectra.\n",
+      "\n",
+      "This notebook is written in Python, as that is the language of the calibration pipeline (CalCOS) and the Timefilter module.  This task can also be run from PyRAF, and is located in the stsdas.hst_calib.hstcos package.\n",
+      "\n",
+      "Lets jump in!"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#-- Necessary library imports for the tutorial\n",
       "import os\n",
       "import glob\n",
       "import numpy as np\n",
@@ -38,7 +43,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#-- iPython notebook magic command to make plots appear within the \n",
+      "#-- iPython notebook 'magic' command to make plots appear within the \n",
       "#-- browser instead of opening a separate plotting window.\n",
       "%matplotlib inline\n",
       "\n",
@@ -55,8 +60,9 @@
      "metadata": {},
      "source": [
       "### Understanding Airglow\n",
+      "---\n",
       "\n",
-      "HST UV spectra are subject to contamination from geocoronal airglow emission.  The most prominent example of this is the strong emission from Hydrogen Lyman Alpha at 1215.6 Anstroms; present in all COS observations that cover that wavelength.  Unlike STIS, which can use smaller apertures to lower the airglow contamination, COS has only a single large, fixed aperture.  \n",
+      "HST UV spectra are subject to contamination from geocoronal airglow emission.  The most prominent example of this is the strong emission from Hydrogen Lyman Alpha at 1215.6 Anstroms; present in all COS observations that cover that wavelength. \n",
       "\n",
       "A list of COS airglow observations, along with possible UV airglow lines, can be found on the [airglow webpage](http://www.stsci.edu/hst/cos/calibration/airglow.html)"
      ]
@@ -66,14 +72,15 @@
      "metadata": {},
      "source": [
       "### Airglow in data\n",
+      "---\n",
       "\n",
-      "Three of the strongest lines seen in COS data are given below.  \n",
+      "Three of the strongest lines seen in COS data are given below.  The strengths of these lines varies from observation to observation, due to changes in the solar activity and changes in HST's orbital position.\n",
       "\n",
       "*  Lyman Alpha 1215.67  \n",
       "*  OI 1302.2 - 1306.0 \n",
       "*  NI 1199.5 - 1200.7\n",
       "\n",
-      "To see this, we will look at some COS observations taken of blank sky, and thus contain only airglow features.  The top panel plots the region around the OI emission, while the bottom panel shows both the Lyman Alpha and the faint NI line.  Two observations have been overplotted, and the variation in airglow strength can been seen."
+      "To see this, we will look at some COS observations taken of blank sky, and thus contain only airglow features.  The top panel in the figure below shows the region around the OI emission, while the bottom panel shows both the Lyman Alpha and the faint NI line.  Two observations have been overplotted, and the variation in airglow strength can been seen."
      ]
     },
     {
@@ -131,11 +138,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Airglow Variation\n",
       "\n",
+      "### Airglow Variation\n",
+      "---\n",
       "Airglow line strengths are driven by the solar activity influencing the Earth's atmosphere.  This impact is severely lessened when the sun is below the horizon, and thus airglow contamination be diminished or eliminated by utilizing only data taken during orbital night.\n",
       "\n",
-      "To facilitate filtering data, a TIMELINE extension was added to corrag data files to track various parameters throughout an exposure.  The different parameters are shown below, and each one is calculated on a second-by-second basis throughout the exposure."
+      "To facilitate filtering out specific data, a TIMELINE extension was added to corrag data files to track various parameters throughout an exposure.  The different parameters are shown below, and each one is calculated on a second-by-second basis throughout the exposure."
      ]
     },
     {
@@ -212,12 +220,42 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Dealing with airglow in data\n",
+      "# Dealing with airglow in data\n",
+      "---\n",
       "\n",
-      "We can use this TIMELINE extension in coordination with the Timefilter module to filter out selected times.\n",
+      "We can use this TIMELINE extension in coordination with the Timefilter module to filter out selected times of input data.  Any of the parameters listed in the TIMELINE extension can be used, depending on your interest, but for our current purpose we will focus on the task of eliminating as much airglow as possible.\n",
       "\n",
-      "First we will plot some real data."
+      "First we will plot some real data contaminated by airglow.  The data shown below is taken by PI Andrew Fox as part of Program 12604.  We will be looking at the G130M/1291 data to view the OI airglow line.  In the plotted spectra, there are very prominent and variable emission features in the region of OI superimposed on the source continuum."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for dataset in glob.glob('data/lbry*x1d.fits'):\n",
+      "    hdu = fits.open(dataset)\n",
+      "    print dataset, hdu[0].header['OPT_ELEM'], hdu[0].header['CENWAVE'], hdu[1].header['EXPTIME']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "data/lbry01i6q_x1d.fits G130M 1291 1176.192\n",
+        "data/lbry01icq_x1d.fits"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " G130M 1291 1176.224\n"
+       ]
+      }
+     ],
+     "prompt_number": 189
     },
     {
      "cell_type": "code",
@@ -268,6 +306,15 @@
       }
      ],
      "prompt_number": 164
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Timefilter\n",
+      "---\n",
+      "\n"
+     ]
     },
     {
      "cell_type": "code",
@@ -332,11 +379,22 @@
      "prompt_number": 187
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The corrtags have had the unwanted data flagged as bad, but we still need to re-extract the spectrum.  To do this, simply call the CalCOS pipeline on the corrtag files.  The pipeline will re-run the needed steps and extract the spectrum on the filtered data.\n",
+      "\n",
+      "Note:  \n",
+      "\n",
+      "*  CalCOS will automatically search for the FUVB segment if only FUVA data is supplied (and vice-versa)  \n",
+      "*  When running CalCOS on corrtag data (instead of rawtags) a different output directory MUST be supplied"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# This step will take awhile as we re-un CalCOS on the filtered datasets.\n",
-      "\n",
+      "#-- This step will take a little while as we re-un CalCOS on the filtered datasets.\n",
       "for dataset in glob.glob('data/lbry*corrtag_a*'):\n",
       "    calcos(dataset, outdir='data/out/')"
      ],
@@ -2020,6 +2078,15 @@
      "prompt_number": 163
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "You may have noticed that only a single spectrum was visible here, though two were seen before filtering.  This is not an error, but rather that only 1 of the two datasets actually contains data taken during orbital night.  For a dataset containing only data with SUN_ALT > 0, no events would still be remaining after filtering, and the spectra are empty.  Even for the one that remains, the signal-to-noise is considerably reduced.  That is because only a small portion of the data was taken during night.\n",
+      "\n",
+      "Again, the TIMELINE extension can help visualize this: below is plotted the SUN_ALT of each observation vs time.  Only lbry01i6q contains data taken during orbital night."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -2069,14 +2136,6 @@
       }
      ],
      "prompt_number": 162
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
